make app responsive fixed search dropdown menu added add expense modal and functionality on small screen added delete confirmation modal

--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@
 
 .btnContainer {
     height: 7%;
+    position: relative;
+    z-index: 1;
 }
 
 .bottomContainer {
@@ -184,6 +186,7 @@ td {
     #background-color: darkolivegreen;
     #color: white;
     #padding: 5px;
+    z-index: 10000;
 }
 
 .addBtnContainer {
@@ -259,6 +262,57 @@ td {
 .dropdown-submenu:hover>.dropdown-menu {
     display: inline-block;
 }
+
+.dropdown-submenu {
+    position: relative;
+}
+
+.dropdown-submenu .dropdown-menu {
+    top: 0;
+    left: 100%;
+    margin-top: -1px;
+}
+
+.dropdownMainMenu {
+    display: none;
+    list-style: none;
+}
+
+.searchType {
+    #display: none;
+}
+
+.smallScreenTableElem {
+    display: none;
+}
+
+.updateBody {
+    padding-left: 12px;
+    padding-right: 10px;
+    padding-top: 10px;
+}
+
+.updateBody::-webkit-scrollbar {
+    width: 7px;
+}
+
+.modal-title {
+    font-family: fantasy;
+    font-size: 160%;
+}
+
+.deleteConfirmModal {
+    width: 30%;
+    height: 30%;
+    top: 35%;
+    left: 35%;
+}
+.deleteConfirmMessage {
+    text-align: center;
+    position: relative;
+    top: 30%;
+}
+
 @media (max-width: 768px) {
     body > * {
         box-sizing: border-box;
@@ -301,9 +355,18 @@ td {
         padding-left: 15px;
         padding-right: 15px;
         position: relative;
-        height: 38%;
+        #height: 38%;
         top: 10px;
         display: none;
+    }
+
+    .expenseType option {
+        font-size: 12px;
+        width: 20px;
+    }
+
+    .form {
+        padding: 25px;
     }
 
     .form-element {
@@ -317,8 +380,20 @@ td {
     .form-input {
         border: 1px solid #cccccc;
         padding: 6px 12px;
-        width: 90%;
+        width: 80%;
         display: inline-block;
+        margin-left: auto;
+        margin-right: 0;
+    }
+
+    .amount {
+        width: 45%;
+        margin-right: 0;
+    }
+
+    .currency {
+        width: 30%;
+        margin-left: 5%;
     }
 
     .bottomExpenseDiv {
@@ -341,14 +416,69 @@ td {
         display: table-cell;
         text-align: center;
     }
+    .smallScreenTableElem {
+        display: none;
+    }
+    .addModal {
+        height: 90%;
+        width: 90%;
+        top: 5%;
+        left: 5%;
+    }
+    .dropdown-menu li {
+        font-size: 20px;
+    }
+    .deleteConfirmModal {
+        width: 70%;
+        height: 50%;
+        top: 25%;
+        left: 15%;
+    }
 }
 
-.dropdown-submenu {
-    position: relative;
-}
-
-.dropdown-submenu .dropdown-menu {
-    top: 0;
-    left: 100%;
-    margin-top: -1px;
+@media (max-width: 576px) {
+    .addBtnContainer span {
+        font-size: 70%;
+    }
+    .deleteBtn,
+    .updateBtn,
+    .searchBtn {
+        font-size: 70%;
+    }
+    .addBtnContainer,
+    .deleteBtnContainer,
+    .updateBtnContainer,
+    .searchBtnContainer {
+        margin-right: 0;
+    }
+    .addBtnContainer {
+        padding-top: 0;
+        padding-bottom: 0;
+    }
+    .btnContainer {
+        text-align: center;
+    }
+    .smallScreenTableElem {
+        display: table-cell;
+    }
+    .bigScreenTableElem {
+        display: none;
+    }
+    .smallDetailType {
+        font-weight: bold;
+    }
+    .smallDetailDate,
+    .smallDetailLocation {
+        font-size: 90%;
+    }
+    .selectAll {
+        width: 8%;
+    }
+    .updateForm {
+        width: 90%;
+        height: 80%;
+    }
+    .dropdown-menu li {
+        font-size: 15px;
+    }
 }
